<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/activitiesBackground"
    tools:context=".ImcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmb_desc"
            style="@style/TextViewForm"/>

        <EditText
            android:id="@+id/edit_tmb_weight"
            android:hint="@string/weight"
            style="@style/EditTextForm"/>

        <EditText
            android:id="@+id/edit_tmb_heigth"
            android:hint="@string/height"
            style="@style/EditTextForm"/>

        <EditText
            android:id="@+id/edit_tmb_age"
            android:hint="@string/age"
            style="@style/EditTextForm"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Frequência de exercícios"
                android:background="@color/white"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_imc_send"
            android:text="@string/calc"
            style="@style/ButtonForm" />

    </LinearLayout>

</ScrollView>