<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_desc"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="30dp"/>

        <EditText
            android:id="@+id/edit_imc_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="number"
            android:maxLength="3"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/edit_imc_heigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="number"
            android:maxLength="3"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/btn_imc_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/calc"
            android:backgroundTint="@color/black" />

    </LinearLayout>

</ScrollView>